# execution-policy

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benches/: overhead.rs
docs/superpowers/plans/: 2026-06-24-execution-policy-foundation.md  2026-06-24-execution-policy-observability.md  2026-06-24-execution-policy-resilience.md  2026-07-17-load-balancing-router.md
docs/superpowers/specs/: 2026-06-24-execution-policy-design.md  2026-07-17-load-balancing-router-design.md
src/: attempt.rs  breaker.rs  builder.rs  classify.rs  concurrency.rs  engine.rs  error.rs  event.rs  fallback.rs  lib.rs  member.rs  meter.rs  pick.rs  plan.rs  policy.rs  router.rs  stall.rs
src/core/: mod.rs  rng.rs  test.rs  tokio.rs
src/retry/: backoff.rs  budget.rs  jitter.rs  mod.rs
tests/: ergonomics.rs  events.rs  load_balancing.rs  resilience.rs  retry_pipeline.rs  send_regression.rs
